internal/gatewayapi/testdata/backendtlspolicytestfile-cert.in.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-btls-1
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
      - name: http
        protocol: HTTP
        port: 80
        allowedRoutes:
          namespaces:
            from: All
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-btls-2
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
      - name: http
        protocol: HTTP
        port: 80
        allowedRoutes:
          namespaces:
            from: All
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-btls-3
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
      - name: http
        protocol: HTTP
        port: 80
        allowedRoutes:
          namespaces:
            from: All


referenceGrants:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: ReferenceGrant
  metadata:
    name: refg-route-svc
    namespace: backends
  spec:
    from:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
        namespace: envoy-gateway
    to:
      - group: ""
        kind: Service

- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: ReferenceGrant
  metadata:
    name: refg-btls-svc
    namespace: backends
  spec:
    from:
      - group: gateway.networking.k8s.io
        kind: BackendTLSPolicy
        namespace: policies
    to:
      - group: ""
        kind: Service
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: ReferenceGrant
  metadata:
    name: refg-gway-route
    namespace: envoy-gateway
  spec:
    from:
      - group: gateway.networking.k8s.io
        kind: Gateway
        namespace: envoy-gateway
    to:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
secrets:
- apiVersion: v1
  kind: Secret
  metadata:
    name: cert-key-secret
    namespace: policies
  type: kubernetes.io/tls
  data:
    tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJHekNCd2dJSkFJL3gxc0NEL0lSa01Bb0dDQ3FHU000OUJBTUNNQll4RkRBU0JnTlZCQU1NQzJadmJ5NWkKWVhJdVkyOXRNQjRYRFRJek1ERXdOVEl4TlRNeU9Wb1hEVEkwTURFd05USXhOVE15T1Zvd0ZqRVVNQklHQTFVRQpBd3dMWm05dkxtSmhjaTVqYjIwd1dUQVRCZ2NxaGtqT1BRSUJCZ2dxaGtqT1BRTUJCd05DQUFRZmxXMnR6T3M4Cm82Nk5USVRmYUhucEc2UzI3Y2hkSldzallKdWJISkFtT2tYdS8rVGxLTXhGUzl4R2tHK09BQjAyR0ZQaHhQVzcKRnFaTFJoOEp0YlZkTUFvR0NDcUdTTTQ5QkFNQ0EwZ0FNRVVDSVFEdlplU1pBZ1VWV2VpM3o0ZEhOTEd0aHpiaQoxRHZ0anRQekhYZ1R [...]
    tls.key: LS0tLS1CRUdJTiBFQyBQUklWQVRFIEtFWS0tLS0tCk1IY0NBUUVFSUxEbnZNM1RKM3NHYm9EeTF4T3dqSVppVFNWeWZXVWF5YVExcWdrdUdacEtvQW9HQ0NxR1NNNDkKQXdFSG9VUURRZ0FFSDVWdHJjenJQS091alV5RTMyaDU2UnVrdHUzSVhTVnJJMkNibXh5UUpqcEY3di9rNVNqTQpSVXZjUnBCdmpnQWROaGhUNGNUMXV4YW1TMFlmQ2JXMVhRPT0KLS0tLS1FTkQgRUMgUFJJVkFURSBLRVktLS0tLQo=
- apiVersion: v1
  kind: Secret
  metadata:
    name: cert-secret
    namespace: policies
  type: opaque
  data:
    tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJHekNCd2dJSkFJL3gxc0NEL0lSa01Bb0dDQ3FHU000OUJBTUNNQll4RkRBU0JnTlZCQU1NQzJadmJ5NWkKWVhJdVkyOXRNQjRYRFRJek1ERXdOVEl4TlRNeU9Wb1hEVEkwTURFd05USXhOVE15T1Zvd0ZqRVVNQklHQTFVRQpBd3dMWm05dkxtSmhjaTVqYjIwd1dUQVRCZ2NxaGtqT1BRSUJCZ2dxaGtqT1BRTUJCd05DQUFRZmxXMnR6T3M4Cm82Nk5USVRmYUhucEc2UzI3Y2hkSldzallKdWJISkFtT2tYdS8rVGxLTXhGUzl4R2tHK09BQjAyR0ZQaHhQVzcKRnFaTFJoOEp0YlZkTUFvR0NDcUdTTTQ5QkFNQ0EwZ0FNRVVDSVFEdlplU1pBZ1VWV2VpM3o0ZEhOTEd0aHpiaQoxRHZ0anRQekhYZ1R [...]
- apiVersion: v1
  kind: Secret
  metadata:
    name: key-secret
    namespace: policies
  type: opaque
  data:
    tls.key: LS0tLS1CRUdJTiBFQyBQUklWQVRFIEtFWS0tLS0tCk1IY0NBUUVFSUxEbnZNM1RKM3NHYm9EeTF4T3dqSVppVFNWeWZXVWF5YVExcWdrdUdacEtvQW9HQ0NxR1NNNDkKQXdFSG9VUURRZ0FFSDVWdHJjenJQS091alV5RTMyaDU2UnVrdHUzSVhTVnJJMkNibXh5UUpqcEY3di9rNVNqTQpSVXZjUnBCdmpnQWROaGhUNGNUMXV4YW1TMFlmQ2JXMVhRPT0KLS0tLS1FTkQgRUMgUFJJVkFURSBLRVktLS0tLQo=

- apiVersion: v1
  kind: Secret
  metadata:
    name: garbage-secret
    namespace: policies
  type: opaque
  data:
    tls.garbage: aXRzQWxsR2FyYmFnZQo=

configMaps:
- apiVersion: v1
  kind: ConfigMap
  metadata:
    name: ca-cmap
    namespace: policies
  data:
    ca.crt: |
      -----BEGIN CERTIFICATE-----
      MIIDJzCCAg+gAwIBAgIUAl6UKIuKmzte81cllz5PfdN2IlIwDQYJKoZIhvcNAQEL
[...]
      -----END CERTIFICATE-----
- apiVersion: v1
  kind: ConfigMap
  metadata:
    name: no-ca-cmap
    namespace: policies
  data:
    garbage.crt: |
      itsAllGarbage

services:
- apiVersion: v1
  kind: Service
  metadata:
    name: http-backend-1
    namespace: backends
  spec:
    clusterIP: 10.11.12.13
    ports:
      - port: 8080
        name: http
        protocol: TCP
        targetPort: 8080

- apiVersion: v1
  kind: Service
  metadata:
    name: http-backend-2
    namespace: backends
  spec:
    clusterIP: 10.11.12.14
    ports:
      - port: 8080
        name: http
        protocol: TCP
        targetPort: 8080

- apiVersion: v1
  kind: Service
  metadata:
    name: http-backend-3
    namespace: backends
  spec:
    clusterIP: 10.11.12.15
    ports:
      - port: 8080
        name: http
        protocol: TCP
        targetPort: 8080

endpointSlices:
- apiVersion: discovery.k8s.io/v1
  kind: EndpointSlice
  metadata:
    name: endpointslice-http-backend-1
    namespace: backends
    labels:
      kubernetes.io/service-name: http-backend-1
  addressType: IPv4
  ports:
    - name: http
      protocol: TCP
      port: 8080
  endpoints:
    - addresses:
        - "10.244.0.10"
      conditions:
        ready: true
- apiVersion: discovery.k8s.io/v1
  kind: EndpointSlice
  metadata:
    name: endpointslice-http-backend-2
    namespace: backends
    labels:
      kubernetes.io/service-name: http-backend-2
  addressType: IPv4
  ports:
    - name: http
      protocol: TCP
      port: 8080
  endpoints:
    - addresses:
        - "10.244.0.11"
      conditions:
        ready: true
- apiVersion: discovery.k8s.io/v1
  kind: EndpointSlice
  metadata:
    name: endpointslice-http-backend-3
    namespace: backends
    labels:
      kubernetes.io/service-name: http-backend-3
  addressType: IPv4
  ports:
    - name: http
      protocol: TCP
      port: 8080
  endpoints:
    - addresses:
        - "10.244.0.12"
      conditions:
        ready: true

httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-btls-1
    namespace: envoy-gateway
  spec:
    parentRefs:
      - namespace: envoy-gateway
        name: gateway-btls-1
        sectionName: http
    rules:
      - backendRefs:
          - name: http-backend-1
            namespace: backends
            port: 8080
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-btls-2
    namespace: envoy-gateway
  spec:
    parentRefs:
      - namespace: envoy-gateway
        name: gateway-btls-2
        sectionName: http
    rules:
      - backendRefs:
          - name: http-backend-2
            namespace: backends
            port: 8080
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-btls-3
    namespace: envoy-gateway
  spec:
    parentRefs:
      - namespace: envoy-gateway
        name: gateway-btls-3
        sectionName: http
    rules:
      - backendRefs:
          - name: http-backend-3
            namespace: backends
            port: 8080

backendTLSPolicies:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: BackendTLSPolicy
  metadata:
    name: policy-btls-1
    namespace: policies
  spec:
    targetRef:
      group: ''
      kind: Service
      name: http-backend-1
      namespace: backends
      sectionName: "8080"
    tls:
      caCertRefs:
        - name: ca-cmap
          group: ''
          kind: ConfigMap
        - name: cert-key-secret
          group: ''
          kind: Secret
      hostname: example.com
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: BackendTLSPolicy
  metadata:
    name: policy-btls-2
    namespace: policies
  spec:
    targetRef:
      group: ''
      kind: Service
      name: http-backend-2
      namespace: backends
      sectionName: "8080"
    tls:
      caCertRefs:
        - name: cert-key-secret
          group: ''
          kind: Secret
      hostname: example.com
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: BackendTLSPolicy
  metadata:
    name: policy-btls-3
    namespace: policies
  spec:
    targetRef:
      group: ''
      kind: Service
      name: http-backend-3
      namespace: backends
      sectionName: "8080"
    tls:
      caCertRefs:
        - name: ca-cmap
          group: ''
          kind: ConfigMap
      hostname: example.com
