internal/gatewayapi/testdata/backendtlspolicytestfile-cert.out.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-btls-1
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
      - allowedRoutes:
          namespaces:
            from: All
        name: http
        port: 80
        protocol: HTTP
  status:
    listeners:
      - attachedRoutes: 1
        conditions:
          - lastTransitionTime: "2024-02-05T09:28:37Z"
            message: Sending translated listener configuration to the data plane
            observedGeneration: 0
            reason: Programmed
            status: "True"
            type: Programmed
          - lastTransitionTime: "2024-02-05T09:28:37Z"
            message: Listener has been successfully translated
            observedGeneration: 0
            reason: Accepted
            status: "True"
            type: Accepted
          - lastTransitionTime: "2024-02-05T09:28:37Z"
            message: Listener references have been resolved
            observedGeneration: 0
            reason: ResolvedRefs
            status: "True"
            type: ResolvedRefs
        name: http
        supportedKinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute
          - group: gateway.networking.k8s.io
            kind: GRPCRoute
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-btls-2
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
      - allowedRoutes:
          namespaces:
            from: All
        name: http
        port: 80
        protocol: HTTP
  status:
    listeners:
      - attachedRoutes: 1
        conditions:
          - lastTransitionTime: "2024-02-05T09:28:37Z"
            message: Sending translated listener configuration to the data plane
            observedGeneration: 0
            reason: Programmed
            status: "True"
            type: Programmed
          - lastTransitionTime: "2024-02-05T09:28:37Z"
            message: Listener has been successfully translated
            observedGeneration: 0
            reason: Accepted
            status: "True"
            type: Accepted
          - lastTransitionTime: "2024-02-05T09:28:37Z"
            message: Listener references have been resolved
            observedGeneration: 0
            reason: ResolvedRefs
            status: "True"
            type: ResolvedRefs
        name: http
        supportedKinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute
          - group: gateway.networking.k8s.io
            kind: GRPCRoute
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-btls-3
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
      - allowedRoutes:
          namespaces:
            from: All
        name: http
        port: 80
        protocol: HTTP
  status:
    listeners:
      - attachedRoutes: 1
        conditions:
          - lastTransitionTime: "2024-02-05T09:28:37Z"
            message: Sending translated listener configuration to the data plane
            observedGeneration: 0
            reason: Programmed
            status: "True"
            type: Programmed
          - lastTransitionTime: "2024-02-05T09:28:37Z"
            message: Listener has been successfully translated
            observedGeneration: 0
            reason: Accepted
            status: "True"
            type: Accepted
          - lastTransitionTime: "2024-02-05T09:28:37Z"
            message: Listener references have been resolved
            observedGeneration: 0
            reason: ResolvedRefs
            status: "True"
            type: ResolvedRefs
        name: http
        supportedKinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute
          - group: gateway.networking.k8s.io
            kind: GRPCRoute

httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-btls-1
    namespace: envoy-gateway
  spec:
    parentRefs:
      - name: gateway-btls-1
        namespace: envoy-gateway
        sectionName: http
    rules:
      - backendRefs:
          - name: http-backend-1
            namespace: backends
            port: 8080
  status:
    parents:
      - conditions:
          - lastTransitionTime: "2024-02-05T09:28:37Z"
            message: Route is accepted
            observedGeneration: 0
            reason: Accepted
            status: "True"
            type: Accepted
          - lastTransitionTime: "2024-02-05T09:28:37Z"
            message: Resolved all the Object references for the Route
            observedGeneration: 0
            reason: ResolvedRefs
            status: "True"
            type: ResolvedRefs
        controllerName: gateway.envoyproxy.io/gatewayclass-controller
        parentRef:
          name: gateway-btls-1
          namespace: envoy-gateway
          sectionName: http
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-btls-2
    namespace: envoy-gateway
  spec:
    parentRefs:
      - name: gateway-btls-2
        namespace: envoy-gateway
        sectionName: http
    rules:
      - backendRefs:
          - name: http-backend-2
            namespace: backends
            port: 8080
  status:
    parents:
      - conditions:
          - lastTransitionTime: "2024-02-05T09:28:37Z"
            message: Route is accepted
            observedGeneration: 0
            reason: Accepted
            status: "True"
            type: Accepted
          - lastTransitionTime: "2024-02-05T09:28:37Z"
            message: Resolved all the Object references for the Route
            observedGeneration: 0
            reason: ResolvedRefs
            status: "True"
            type: ResolvedRefs
        controllerName: gateway.envoyproxy.io/gatewayclass-controller
        parentRef:
          name: gateway-btls-2
          namespace: envoy-gateway
          sectionName: http
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-btls-3
    namespace: envoy-gateway
  spec:
    parentRefs:
      - name: gateway-btls-3
        namespace: envoy-gateway
        sectionName: http
    rules:
      - backendRefs:
          - name: http-backend-3
            namespace: backends
            port: 8080
  status:
    parents:
      - conditions:
          - lastTransitionTime: "2024-02-05T09:28:37Z"
            message: Route is accepted
            observedGeneration: 0
            reason: Accepted
            status: "True"
            type: Accepted
          - lastTransitionTime: "2024-02-05T09:28:37Z"
            message: Resolved all the Object references for the Route
            observedGeneration: 0
            reason: ResolvedRefs
            status: "True"
            type: ResolvedRefs
        controllerName: gateway.envoyproxy.io/gatewayclass-controller
        parentRef:
          name: gateway-btls-3
          namespace: envoy-gateway
          sectionName: http

backendTLSPolicies:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: BackendTLSPolicy
  metadata:
    name: policy-btls-1
    namespace: policies
  spec:
    targetRef:
      group: ""
      kind: Service
      name: http-backend-1
      namespace: backends
      sectionName: "8080"
    tls:
      caCertRefs:
        - group: ""
          kind: ConfigMap
          name: ca-cmap
        - group: ""
          kind: Secret
          name: cert-key-secret
      hostname: example.com
  status:
    ancestors:
      - ancestorRef:
          name: gateway-btls-1
          namespace: envoy-gateway
          sectionName: http
        conditions:
          - lastTransitionTime: "2024-02-05T09:31:24Z"
            message: BackendTLSPolicy is Accepted
            observedGeneration: 0
            reason: Accepted
            status: "True"
            type: Accepted
        controllerName: gateway.envoyproxy.io/gatewayclass-controller
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: BackendTLSPolicy
  metadata:
    name: policy-btls-2
    namespace: policies
  spec:
    targetRef:
      group: ""
      kind: Service
      name: http-backend-2
      namespace: backends
      sectionName: "8080"
    tls:
      caCertRefs:
        - group: ""
          kind: Secret
          name: cert-key-secret
      hostname: example.com
  status:
    ancestors:
      - ancestorRef:
          name: gateway-btls-2
          namespace: envoy-gateway
          sectionName: http
        conditions:
          - lastTransitionTime: "2024-02-05T09:31:24Z"
            message: no refered configmap found
            observedGeneration: 0
            reason: Invalid
            status: "False"
            type: Accepted
        controllerName: gateway.envoyproxy.io/gatewayclass-controller
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: BackendTLSPolicy
  metadata:
    name: policy-btls-3
    namespace: policies
  spec:
    targetRef:
      group: ""
      kind: Service
      name: http-backend-3
      namespace: backends
      sectionName: "8080"
    tls:
      caCertRefs:
        - group: ""
          kind: ConfigMap
          name: ca-cmap
      hostname: example.com
  status:
    ancestors:
      - ancestorRef:
          name: gateway-btls-3
          namespace: envoy-gateway
          sectionName: http
        conditions:
          - lastTransitionTime: "2024-02-05T09:31:24Z"
            message: BackendTLSPolicy is Accepted
            observedGeneration: 0
            reason: Accepted
            status: "True"
            type: Accepted
        controllerName: gateway.envoyproxy.io/gatewayclass-controller

xdsIR:
  envoy-gateway/gateway-btls-1:
    accessLog:
      text:
        - path: /dev/stdout
    http:
      - address: 0.0.0.0
        hostnames:
          - '*'
        isHTTP2: false
        name: envoy-gateway/gateway-btls-1/http
        port: 10080
        routes:
          - backendTLS:
              CaCertificate: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lVQWw2VUtJdUttenRlODFjbGx6NVBmZE4ySWxJd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0l6RVFNQTRHQTFVRUF3d0hiWGxqYVdWdWRERVBNQTBHQTFVRUNnd0dhM1ZpWldSaU1CNFhEVEl6TVRBdwpNakExTkRFMU4xb1hEVEkwTVRBd01UQTFOREUxTjFvd0l6RVFNQTRHQTFVRUF3d0hiWGxqYVdWdWRERVBNQTBHCkExVUVDZ3dHYTNWaVpXUmlNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXdTVGMKMXlqOEhXNjJueW5rRmJYbzRWWEt2MmpDMFBNN2RQVmt5ODdGd2VaY1RLTG9XUVZQUUUycDJrTERLNk9Fc3ptTQp [...]
              CertificateByte: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJHekNCd2dJSkFJL3gxc0NEL0lSa01Bb0dDQ3FHU000OUJBTUNNQll4RkRBU0JnTlZCQU1NQzJadmJ5NWkKWVhJdVkyOXRNQjRYRFRJek1ERXdOVEl4TlRNeU9Wb1hEVEkwTURFd05USXhOVE15T1Zvd0ZqRVVNQklHQTFVRQpBd3dMWm05dkxtSmhjaTVqYjIwd1dUQVRCZ2NxaGtqT1BRSUJCZ2dxaGtqT1BRTUJCd05DQUFRZmxXMnR6T3M4Cm82Nk5USVRmYUhucEc2UzI3Y2hkSldzallKdWJISkFtT2tYdS8rVGxLTXhGUzl4R2tHK09BQjAyR0ZQaHhQVzcKRnFaTFJoOEp0YlZkTUFvR0NDcUdTTTQ5QkFNQ0EwZ0FNRVVDSVFEdlplU1pBZ1VWV2VpM3o0ZEhOTEd0aHpia [...]
              Hostname: example.com
              Name: policy-btls-1/policies
              PrivateKeyByte: LS0tLS1CRUdJTiBFQyBQUklWQVRFIEtFWS0tLS0tCk1IY0NBUUVFSUxEbnZNM1RKM3NHYm9EeTF4T3dqSVppVFNWeWZXVWF5YVExcWdrdUdacEtvQW9HQ0NxR1NNNDkKQXdFSG9VUURRZ0FFSDVWdHJjenJQS091alV5RTMyaDU2UnVrdHUzSVhTVnJJMkNibXh5UUpqcEY3di9rNVNqTQpSVXZjUnBCdmpnQWROaGhUNGNUMXV4YW1TMFlmQ2JXMVhRPT0KLS0tLS1FTkQgRUMgUFJJVkFURSBLRVktLS0tLQo=
            backendWeights:
              invalid: 0
              valid: 0
            destination:
              name: httproute/envoy-gateway/httproute-btls-1/rule/0
              settings:
                - endpoints:
                    - host: 10.244.0.10
                      port: 8080
                  protocol: HTTP
                  weight: 1
            hostname: '*'
            name: httproute/envoy-gateway/httproute-btls-1/rule/0/match/-1/*
            pathMatch:
              distinct: false
              name: ""
              prefix: /
  envoy-gateway/gateway-btls-2:
    accessLog:
      text:
        - path: /dev/stdout
    http:
      - address: 0.0.0.0
        hostnames:
          - '*'
        isHTTP2: false
        name: envoy-gateway/gateway-btls-2/http
        port: 10080
        routes:
          - backendWeights:
              invalid: 0
              valid: 0
            destination:
              name: httproute/envoy-gateway/httproute-btls-2/rule/0
              settings:
                - endpoints:
                    - host: 10.244.0.11
                      port: 8080
                  protocol: HTTP
                  weight: 1
            hostname: '*'
            name: httproute/envoy-gateway/httproute-btls-2/rule/0/match/-1/*
            pathMatch:
              distinct: false
              name: ""
              prefix: /
  envoy-gateway/gateway-btls-3:
    accessLog:
      text:
        - path: /dev/stdout
    http:
      - address: 0.0.0.0
        hostnames:
          - '*'
        isHTTP2: false
        name: envoy-gateway/gateway-btls-3/http
        port: 10080
        routes:
          - backendTLS:
              CaCertificate: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lVQWw2VUtJdUttenRlODFjbGx6NVBmZE4ySWxJd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0l6RVFNQTRHQTFVRUF3d0hiWGxqYVdWdWRERVBNQTBHQTFVRUNnd0dhM1ZpWldSaU1CNFhEVEl6TVRBdwpNakExTkRFMU4xb1hEVEkwTVRBd01UQTFOREUxTjFvd0l6RVFNQTRHQTFVRUF3d0hiWGxqYVdWdWRERVBNQTBHCkExVUVDZ3dHYTNWaVpXUmlNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXdTVGMKMXlqOEhXNjJueW5rRmJYbzRWWEt2MmpDMFBNN2RQVmt5ODdGd2VaY1RLTG9XUVZQUUUycDJrTERLNk9Fc3ptTQp [...]
              CertificateByte: null
              Hostname: example.com
              Name: policy-btls-3/policies
              PrivateKeyByte: null
            backendWeights:
              invalid: 0
              valid: 0
            destination:
              name: httproute/envoy-gateway/httproute-btls-3/rule/0
              settings:
                - endpoints:
                    - host: 10.244.0.12
                      port: 8080
                  protocol: HTTP
                  weight: 1
            hostname: '*'
            name: httproute/envoy-gateway/httproute-btls-3/rule/0/match/-1/*
            pathMatch:
              distinct: false
              name: ""
              prefix: /

infraIR:
  envoy-gateway/gateway-btls-1:
    proxy:
      config:
        apiVersion: gateway.envoyproxy.io/v1alpha1
        kind: EnvoyProxy
        metadata:
          annotations:
            kubectl.kubernetes.io/last-applied-configuration: |
              {"apiVersion":"gateway.envoyproxy.io/v1alpha1","kind":"EnvoyProxy","metadata":{"annotations":{},"name":"custom-proxy-config","namespace":"envoy-gateway-system"},"spec":{"provider":{"kubernetes":{"envoyService":{"type":"ClusterIP"}},"type":"Kubernetes"}}}
          creationTimestamp: "2024-02-05T09:22:44Z"
          generation: 1
          managedFields:
            - apiVersion: gateway.envoyproxy.io/v1alpha1
              fieldsType: FieldsV1
              fieldsV1:
                f:metadata:
                  f:annotations:
                    .: {}
                    f:kubectl.kubernetes.io/last-applied-configuration: {}
                f:spec:
                  .: {}
                  f:logging:
                    .: {}
                    f:level:
                      .: {}
                      f:default: {}
                  f:provider:
                    .: {}
                    f:kubernetes:
                      .: {}
                      f:envoyService:
                        .: {}
                        f:type: {}
                    f:type: {}
              manager: kubectl-client-side-apply
              operation: Update
              time: "2024-02-05T09:22:44Z"
          name: custom-proxy-config
          namespace: envoy-gateway-system
          resourceVersion: "842"
          uid: e902849a-bc98-41d2-8520-b8286f95f1ac
        spec:
          logging:
            level:
              default: warn
          provider:
            kubernetes:
              envoyService:
                type: ClusterIP
            type: Kubernetes
        status: {}
      listeners:
        - address: ""
          ports:
            - containerPort: 10080
              name: http
              protocol: HTTP
              servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-btls-1
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
      name: envoy-gateway/gateway-btls-1
  envoy-gateway/gateway-btls-2:
    proxy:
      config:
        apiVersion: gateway.envoyproxy.io/v1alpha1
        kind: EnvoyProxy
        metadata:
          annotations:
            kubectl.kubernetes.io/last-applied-configuration: |
              {"apiVersion":"gateway.envoyproxy.io/v1alpha1","kind":"EnvoyProxy","metadata":{"annotations":{},"name":"custom-proxy-config","namespace":"envoy-gateway-system"},"spec":{"provider":{"kubernetes":{"envoyService":{"type":"ClusterIP"}},"type":"Kubernetes"}}}
          creationTimestamp: "2024-02-05T09:22:44Z"
          generation: 1
          managedFields:
            - apiVersion: gateway.envoyproxy.io/v1alpha1
              fieldsType: FieldsV1
              fieldsV1:
                f:metadata:
                  f:annotations:
                    .: {}
                    f:kubectl.kubernetes.io/last-applied-configuration: {}
                f:spec:
                  .: {}
                  f:logging:
                    .: {}
                    f:level:
                      .: {}
                      f:default: {}
                  f:provider:
                    .: {}
                    f:kubernetes:
                      .: {}
                      f:envoyService:
                        .: {}
                        f:type: {}
                    f:type: {}
              manager: kubectl-client-side-apply
              operation: Update
              time: "2024-02-05T09:22:44Z"
          name: custom-proxy-config
          namespace: envoy-gateway-system
          resourceVersion: "842"
          uid: e902849a-bc98-41d2-8520-b8286f95f1ac
        spec:
          logging:
            level:
              default: warn
          provider:
            kubernetes:
              envoyService:
                type: ClusterIP
            type: Kubernetes
        status: {}
      listeners:
        - address: ""
          ports:
            - containerPort: 10080
              name: http
              protocol: HTTP
              servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-btls-2
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
      name: envoy-gateway/gateway-btls-2
  envoy-gateway/gateway-btls-3:
    proxy:
      config:
        apiVersion: gateway.envoyproxy.io/v1alpha1
        kind: EnvoyProxy
        metadata:
          annotations:
            kubectl.kubernetes.io/last-applied-configuration: |
              {"apiVersion":"gateway.envoyproxy.io/v1alpha1","kind":"EnvoyProxy","metadata":{"annotations":{},"name":"custom-proxy-config","namespace":"envoy-gateway-system"},"spec":{"provider":{"kubernetes":{"envoyService":{"type":"ClusterIP"}},"type":"Kubernetes"}}}
          creationTimestamp: "2024-02-05T09:22:44Z"
          generation: 1
          managedFields:
            - apiVersion: gateway.envoyproxy.io/v1alpha1
              fieldsType: FieldsV1
              fieldsV1:
                f:metadata:
                  f:annotations:
                    .: {}
                    f:kubectl.kubernetes.io/last-applied-configuration: {}
                f:spec:
                  .: {}
                  f:logging:
                    .: {}
                    f:level:
                      .: {}
                      f:default: {}
                  f:provider:
                    .: {}
                    f:kubernetes:
                      .: {}
                      f:envoyService:
                        .: {}
                        f:type: {}
                    f:type: {}
              manager: kubectl-client-side-apply
              operation: Update
              time: "2024-02-05T09:22:44Z"
          name: custom-proxy-config
          namespace: envoy-gateway-system
          resourceVersion: "842"
          uid: e902849a-bc98-41d2-8520-b8286f95f1ac
        spec:
          logging:
            level:
              default: warn
          provider:
            kubernetes:
              envoyService:
                type: ClusterIP
            type: Kubernetes
        status: {}
      listeners:
        - address: ""
          ports:
            - containerPort: 10080
              name: http
              protocol: HTTP
              servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-btls-3
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
      name: envoy-gateway/gateway-btls-3
