internal/gatewayapi/testdata/backendtlspolicytestfile-valid.yaml
test matrix :
  valid secret with cert and key 
  invalid secret with cert 
  invalid secret with key
  invalid configmap without ca
  valid multiple ca 
  valid cross namespace btls with reference grant 
  valid same namespace btls 
  invalid cross namespace btls without reference grant


gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: btls-gateway
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: http
          protocol: HTTP
          port: 80
          allowedRoutes:
            namespaces:
              from: All
httpRoutes:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      namespace: envoy-gateway
      name: httproute-1
    spec:
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-1
      rules:
        - matches:
            - path:
                type: Exact
                value: "/exact"
          backendRefs:
            - name: service-1
              namespace: backends
              port: 8080
services:
  - apiVersion: v1
    kind: Service
    metadata:
      namespace: backends
      name: service-1
    spec:
      clusterIP: 1.1.1.1
      ports:
        - name: http
          port: 8080
          protocol: TCP
          targetPort: 8080
endpointSlices:
  - apiVersion: discovery.k8s.io/v1
    kind: EndpointSlice
    metadata:
      name: endpointslice-service-1
      namespace: backends
      labels:
        kubernetes.io/service-name: service-1
    addressType: IPv4
    ports:
      - name: http
        protocol: TCP
        port: 8080
    endpoints:
      - addresses:
          - "7.7.7.7"
        conditions:
          ready: true
referenceGrants:
  - apiVersion: gateway.networking.k8s.io/v1alpha2
    kind: ReferenceGrant
    metadata:
      namespace: backends
      name: referencegrant-1
    spec:
      from:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
          namespace: default
      to:
        - group: ""
          kind: Service
secrets:
  - apiVersion: v1
    kind: Secret
    metadata:
      namespace: envoy-gateway
      name: tls-secret-ecdsa-1
    type: kubernetes.io/tls
    data:
      tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJHekNCd2dJSkFJL3gxc0NEL0lSa01Bb0dDQ3FHU000OUJBTUNNQll4RkRBU0JnTlZCQU1NQzJadmJ5NWkKWVhJdVkyOXRNQjRYRFRJek1ERXdOVEl4TlRNeU9Wb1hEVEkwTURFd05USXhOVE15T1Zvd0ZqRVVNQklHQTFVRQpBd3dMWm05dkxtSmhjaTVqYjIwd1dUQVRCZ2NxaGtqT1BRSUJCZ2dxaGtqT1BRTUJCd05DQUFRZmxXMnR6T3M4Cm82Nk5USVRmYUhucEc2UzI3Y2hkSldzallKdWJISkFtT2tYdS8rVGxLTXhGUzl4R2tHK09BQjAyR0ZQaHhQVzcKRnFaTFJoOEp0YlZkTUFvR0NDcUdTTTQ5QkFNQ0EwZ0FNRVVDSVFEdlplU1pBZ1VWV2VpM3o0ZEhOTEd0aHpiaQoxRHZ0anRQekhYZ [...]
      tls.key: LS0tLS1CRUdJTiBFQyBQUklWQVRFIEtFWS0tLS0tCk1IY0NBUUVFSUxEbnZNM1RKM3NHYm9EeTF4T3dqSVppVFNWeWZXVWF5YVExcWdrdUdacEtvQW9HQ0NxR1NNNDkKQXdFSG9VUURRZ0FFSDVWdHJjenJQS091alV5RTMyaDU2UnVrdHUzSVhTVnJJMkNibXh5UUpqcEY3di9rNVNqTQpSVXZjUnBCdmpnQWROaGhUNGNUMXV4YW1TMFlmQ2JXMVhRPT0KLS0tLS1FTkQgRUMgUFJJVkFURSBLRVktLS0tLQo=
  - apiVersion: v1
    kind: Secret
    metadata:
      namespace: envoy-gateway
      name: tls-secret-ecdsa-2
    type: kubernetes.io/tls
    data:
      tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJWekNCM3dJSkFJN1BZQlRZU0NXYk1Bb0dDQ3FHU000OUJBTUNNQll4RkRBU0JnTlZCQU1NQzJadmJ5NWkKWVhJdVkyOXRNQjRYRFRJek1ERXdOVEl4TlRjek1Gb1hEVEkwTURFd05USXhOVGN6TUZvd0ZqRVVNQklHQTFVRQpBd3dMWm05dkxtSmhjaTVqYjIwd2RqQVFCZ2NxaGtqT1BRSUJCZ1VyZ1FRQUlnTmlBQVRqK3RQWThsV3ZyUjlyCjU0U0FhOGNuQnRJTUZnLzZJajUxR1JBWitXR1FjZW1KUlEzblBCUHJoc1Y5dGp1TXZVdkxORCtINkJ0eWduNVUKMjJNM2w3OE9aUkZsNGszZHBPd2xlZUpOUVBqbHl3MGNCdGNwVzJhWUdPUVREMndxVzdNd0NnWUlLb1pJemowRQpBd0lEWndBd1pBS [...]
      tls.key: LS0tLS1CRUdJTiBFQyBQUklWQVRFIEtFWS0tLS0tCk1JR2tBZ0VCQkRCTFhMK3ExWFBhYnpzZGhyOXVwcWlWTTQwcTBXUVkwMTYvZlVJNFEzL1gvR2NyZHhTTUQrZEQKQk9HZHZLZFlvLzZnQndZRks0RUVBQ0toWkFOaUFBVGordFBZOGxXdnJSOXI1NFNBYThjbkJ0SU1GZy82SWo1MQpHUkFaK1dHUWNlbUpSUTNuUEJQcmhzVjl0anVNdlV2TE5EK0g2QnR5Z241VTIyTTNsNzhPWlJGbDRrM2RwT3dsCmVlSk5RUGpseXcwY0J0Y3BXMmFZR09RVEQyd3FXN009Ci0tLS0tRU5EIEVDIFBSSVZBVEUgS0VZLS0tLS0K
  - apiVersion: v1
    kind: Secret
    metadata:
      namespace: envoy-gateway
      name: tls-secret-1
    type: kubernetes.io/tls
    data:
      tls.key: YmFyCg==
