internal/gatewayapi/testdata/backendtlspolicytestfile-valid.out.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: btls-gateway
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
      - allowedRoutes:
          namespaces:
            from: All
        name: http
        port: 80
        protocol: HTTP
  status:
    listeners:
      - attachedRoutes: 1
        conditions:
          - lastTransitionTime: "2024-02-01T10:26:51Z"
            message: Sending translated listener configuration to the data plane
            observedGeneration: 0
            reason: Programmed
            status: "True"
            type: Programmed
          - lastTransitionTime: "2024-02-01T10:26:51Z"
            message: Listener has been successfully translated
            observedGeneration: 0
            reason: Accepted
            status: "True"
            type: Accepted
          - lastTransitionTime: "2024-02-01T10:26:51Z"
            message: Listener references have been resolved
            observedGeneration: 0
            reason: ResolvedRefs
            status: "True"
            type: ResolvedRefs
        name: http
        supportedKinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute
          - group: gateway.networking.k8s.io
            kind: GRPCRoute
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: btls-httproute
    namespace: envoy-gateway
  spec:
    parentRefs:
      - name: btls-gateway
        namespace: envoy-gateway
        sectionName: http
    rules:
      - backendRefs:
          - name: btls-service
            namespace: backend
            port: 8080
        matches:
          - path:
              type: Exact
              value: /exact
  status:
    parents:
      - conditions:
          - lastTransitionTime: "2024-02-02T05:02:03Z"
            message: Route is accepted
            observedGeneration: 0
            reason: Accepted
            status: "True"
            type: Accepted
          - lastTransitionTime: "2024-02-02T05:02:03Z"
            message: Resolved all the Object references for the Route
            observedGeneration: 0
            reason: ResolvedRefs
            status: "True"
            type: ResolvedRefs
        controllerName: gateway.envoyproxy.io/gatewayclass-controller
        parentRef:
          name: btls-gateway
          namespace: envoy-gateway
          sectionName: http

backendTLSPolicies:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: BackendTLSPolicy
  metadata:
    name: backendtls
    namespace: backend
  spec:
    targetRef:
      group: ""
      kind: Service
      name: btls-service
      namespace: backend
      sectionName: "8080"
    tls:
      caCertRefs:
        - group: ""
          kind: ConfigMap
          name: btls-configmap
        - group: ""
          kind: Secret
          name: btls-secret
      hostname: example.com
  status:
    ancestors:
      - ancestorRef:
          name: btls-gateway
          namespace: envoy-gateway
          sectionName: http
        conditions:
          - lastTransitionTime: "2024-02-02T10:20:15Z"
            message: BackendTLSPolicy is Accepted
            observedGeneration: 0
            reason: Accepted
            status: "True"
            type: Accepted
        controllerName: gateway.envoyproxy.io/gatewayclass-controller
infraIR:
  envoy-gateway/btls-gateway:
    proxy:
      listeners:
        - address: ""
          ports:
            - containerPort: 10080
              name: http
              protocol: HTTP
              servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: btls-gateway
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
      name: envoy-gateway/btls-gateway
xdsIR:
  envoy-gateway/btls-gateway:
    accessLog:
      text:
        - path: /dev/stdout
    http:
      - address: 0.0.0.0
        hostnames:
          - '*'
        isHTTP2: false
        name: envoy-gateway/btls-gateway/http
        port: 10080
        routes:
          - backendTLS:
              CaCertificate: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lVQWw2VUtJdUttenRlODFjbGx6NVBmZE4ySWxJd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0l6RVFNQTRHQTFVRUF3d0hiWGxqYVdWdWRERVBNQTBHQTFVRUNnd0dhM1ZpWldSaU1CNFhEVEl6TVRBdwpNakExTkRFMU4xb1hEVEkwTVRBd01UQTFOREUxTjFvd0l6RVFNQTRHQTFVRUF3d0hiWGxqYVdWdWRERVBNQTBHCkExVUVDZ3dHYTNWaVpXUmlNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXdTVGMKMXlqOEhXNjJueW5rRmJYbzRWWEt2MmpDMFBNN2RQVmt5ODdGd2VaY1RLTG9XUVZQUUUycDJrTERLNk9Fc3ptTQp [...]
              CertificateByte: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJHekNCd2dJSkFJL3gxc0NEL0lSa01Bb0dDQ3FHU000OUJBTUNNQll4RkRBU0JnTlZCQU1NQzJadmJ5NWkKWVhJdVkyOXRNQjRYRFRJek1ERXdOVEl4TlRNeU9Wb1hEVEkwTURFd05USXhOVE15T1Zvd0ZqRVVNQklHQTFVRQpBd3dMWm05dkxtSmhjaTVqYjIwd1dUQVRCZ2NxaGtqT1BRSUJCZ2dxaGtqT1BRTUJCd05DQUFRZmxXMnR6T3M4Cm82Nk5USVRmYUhucEc2UzI3Y2hkSldzallKdWJISkFtT2tYdS8rVGxLTXhGUzl4R2tHK09BQjAyR0ZQaHhQVzcKRnFaTFJoOEp0YlZkTUFvR0NDcUdTTTQ5QkFNQ0EwZ0FNRVVDSVFEdlplU1pBZ1VWV2VpM3o0ZEhOTEd0aHpia [...]
              Hostname: example.com
              Name: backendtls/backend
              PrivateKeyByte: LS0tLS1CRUdJTiBFQyBQUklWQVRFIEtFWS0tLS0tCk1IY0NBUUVFSUxEbnZNM1RKM3NHYm9EeTF4T3dqSVppVFNWeWZXVWF5YVExcWdrdUdacEtvQW9HQ0NxR1NNNDkKQXdFSG9VUURRZ0FFSDVWdHJjenJQS091alV5RTMyaDU2UnVrdHUzSVhTVnJJMkNibXh5UUpqcEY3di9rNVNqTQpSVXZjUnBCdmpnQWROaGhUNGNUMXV4YW1TMFlmQ2JXMVhRPT0KLS0tLS1FTkQgRUMgUFJJVkFURSBLRVktLS0tLQo=
            backendWeights:
              invalid: 0
              valid: 0
            destination:
              name: httproute/envoy-gateway/btls-httproute/rule/0
              settings:
                - endpoints:
                    - host: 10.2.1.32
                      port: 8080
                  protocol: HTTP
                  weight: 1
            hostname: '*'
            name: httproute/envoy-gateway/btls-httproute/rule/0/match/0/*
            pathMatch:
              distinct: false
              exact: /exact
              name: ""
