internal/gatewayapi/testdata/random.in.yaml
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      name: gateway-btls-1
      namespace: gateways
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: http
          protocol: HTTP
          port: 80
          allowedRoutes:
            namespaces:
              from: All

services:
  - apiVersion: v1
    kind: Service
    metadata:
      name: http-backend-1
      namespace: backends
    spec:
      clusterIP: 10.11.12.13
      ports:
        - port: 8080
          protocol: TCP
          targetPort: 8080

endpointSlices:
  - apiVersion: discovery.k8s.io/v1
    kind: EndpointSlice
    metadata:
      name: endpointslice-http-backend-1
      namespace: backends
      labels:
        kubernetes.io/service-name: http-backend-1
    addressType: IPv4
    ports:
      - name: http
        protocol: TCP
        port: 8080
    endpoints:
      - addresses:
          - "10.244.0.10"
        conditions:
          ready: true

referenceGrants:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: ReferenceGrant
  metadata:
    name: refg-route-svc
    namespace: backends
  spec:
    from:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
        namespace: routes
    to:
      - group: ""
        kind: Service

httpRoutes:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      name: httproute-btls-1
      namespace: routes
    spec:
      parentRefs:
        - namespace: gateways
          name: gateway-btls-1
          sectionName: http
      rules:
        - backendRefs:
            - name: http-backend-1
              namespace: backends
              port: 8080
